--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,2 +1,3 @@
 @import '~/node_modules/@braid/vue-formulate/themes/snow/snow.scss';
+@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap");
 
