glass design updated, alert design updated

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,5 +1,13 @@
+//colors
 $white: #fff;
 $black: #000;
 $lightBlue: #cbd4db;
+$darkerBlue: #acb6be;
 $purple: #364cf4;
 $background: #020517;
+
+//fonts
+$bodyFont: 'Raleway',
+sans-serif;
+$headingFont:'Source Sans Pro',
+sans-serif;
