refactor portfolio page

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -9,5 +9,6 @@ $background: #020517;
 //fonts
 $bodyFont: 'Raleway',
 sans-serif;
-$headingFont:'Source Sans Pro',
-sans-serif;
+$headingFont:'Crimson Text',
+serif;
+$headingFontSize: 22px;
