working on new colors

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -4,7 +4,8 @@ $black: #000;
 $lightBlue: #cbd4db;
 $darkerBlue: #acb6be;
 $purple: #364cf4;
-$background: #020517;
+// $background: #020517;
+$background: white;
 
 //fonts
 $bodyFont: 'Raleway',
