working on homepage anim

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -2,7 +2,7 @@
 $white: #fff;
 $black: #000;
 $lightBlue: #cbd4db;
-$darkerBlue: #acb6be;
+$darkerBlue: #080B4F;
 $purple: #364cf4;
 // $background: #020517;
 $background: white;
