homepage heading anim in progress

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -10,6 +10,6 @@ $background: white;
 //fonts
 $bodyFont: 'Raleway',
 sans-serif;
-$headingFont:'Crimson Text',
-serif;
+$headingFont:'Raleway',
+sans-serif;
 $headingFontSize: 22px;
