headline anim added

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -4,6 +4,8 @@ $black: #000;
 $lightBlue: #cbd4db;
 $darkerBlue: #080B4F;
 $purple: #364cf4;
+$mainBlue: #080b4f;
+$mainGold: #FECF02;
 // $background: #020517;
 $background: white;
 
