added new font files, footer to index page

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -7,11 +7,12 @@ $purple: #364cf4;
 $mainBlue: #080b4f;
 $mainGold: #FECF02;
 // $background: #020517;
-$background: white;
+$background: #ffffff;
+$grey: #9d9d9d;
 
 //fonts
 $bodyFont: 'Raleway',
 sans-serif;
-$headingFont:'Raleway',
+$headingFont:'Neuzeit Grotesk',
 sans-serif;
 $headingFontSize: 22px;
