--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,15 +1,17 @@
-@import '~/node_modules/@braid/vue-formulate/themes/snow/snow.scss';
-@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap");
+// .page-enter-active,
+// .page-leave-active {
+//   transition-property: opacity;
+//   transition-timing-function: ease-in-out;
+//   transition-duration: 500ms;
+// }
 
+// .page-enter,
+// .page-leave-to {
+//   opacity: 0;
+// }
 
-.page-enter-active,
-.page-leave-active {
-  transition-property: opacity;
-  transition-timing-function: ease-in-out;
-  transition-duration: 500ms;
-}
-
-.page-enter,
-.page-leave-to {
-  opacity: 0;
+html,
+body,
+.page {
+  height: 100%;
 }
