changes to index page

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -2,17 +2,15 @@
 $white: #fff;
 $black: #000;
 $lightBlue: #cbd4db;
-$darkerBlue: #080B4F;
+$darkerBlue: #080b4f;
 $purple: #364cf4;
 $mainBlue: #080b4f;
-$mainGold: #FECF02;
+$mainGold: #fecf02;
 // $background: #020517;
 $background: #ffffff;
 $grey: #9d9d9d;
 
 //fonts
-$bodyFont: 'Raleway',
-sans-serif;
-$headingFont:'Neuzeit Grotesk',
-sans-serif;
+$bodyFont: "Source Sans Pro", sans-serif;
+$headingFont: "Montserrat", sans-serif;
 $headingFontSize: 22px;
