updated to portfolio index and show for web and mobile

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -14,3 +14,14 @@ $grey: #9d9d9d;
 $bodyFont: "Source Sans Pro", sans-serif;
 $headingFont: "Montserrat", sans-serif;
 $headingFontSize: 22px;
+
+// back button
+$black: #666;
+$white: #eaeaea;
+$gray: #999;
+
+$text-arrow-space: 16px;
+$shaft-width: 64px;
+$shaft-thickness: 1px;
+$arrow-head-width: 8px;
+$arrow-head-thickness: $shaft-thickness;
